--- a/module/leccion1/momento1_1/index.html
+++ b/module/leccion1/momento1_1/index.html
@@ -9,14 +9,14 @@
         <hr class="hr-50">
         <h1 class="sf-txt-md sf-txt-xl-lg sf-txt-300 sf-text-white">
           <span class="animate__animated animate__rotateInDownLeft animate__delay-1s"><i
-              class=" fa-regular fa-circle-check sf-text-purple"></i> Marco legal y antecedentes de la Ley Karin​ <br></span>
+              class=" fa-regular fa-circle-check sf-text-purple"></i> Marco legal y antecedentes de la Ley Karin <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-2s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Definiciones de acoso laboral y violencia en el trabajo​ <br></span>
+              class="fa-regular fa-circle-check sf-text-purple"></i> Definiciones de acoso laboral y violencia en el trabajo <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-3s"><i
               class="fa-regular fa-circle-check sf-text-purple"></i> Obligaciones del empleador y derechos del trabajador
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-4s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Tipos de conductas prohibidas y sus consecuencias​</span>
+              class="fa-regular fa-circle-check sf-text-purple"></i> Tipos de conductas prohibidas y sus consecuencias</span>
         </h1>
       </div>
     </div>
