--- a/module/leccion2/momento2_1/index.html
+++ b/module/leccion2/momento2_1/index.html
@@ -9,16 +9,19 @@
         <hr class="hr-50">
         <h1 class="sf-txt-md sf-txt-xl-lg sf-txt-300 sf-text-white">
           <span class="animate__animated animate__rotateInDownLeft animate__delay-0s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Identificación de factores de riesgo psicosocial
+              class="fa-regular fa-circle-check sf-text-purple"></i> Principales diferencias entre conflicto, acoso y violencia laboral
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-1s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Medidas preventivas y cultura organizacional
+              class="fa-regular fa-circle-check sf-text-purple"></i> Diversos tipos de acoso laboral
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-2s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Programas de capacitación y sensibilización
+              class="fa-regular fa-circle-check sf-text-purple"></i> Tipo especial de acoso: Acoso sexual
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-3s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Canales de comunicación y denuncia temprana
+              class="fa-regular fa-circle-check sf-text-purple"></i> Hablemos sobre violencia laboral
+            <br></span>
+          <span class="animate__animated animate__rotateInDownLeft animate__delay-4s"><i
+              class="fa-regular fa-circle-check sf-text-purple"></i> Otras conductas que pueden ser acoso laboral según la LEY KARIN
             <br></span>
         </h1>
       </div>
