--- a/module/leccion2/momento2_3/index.html
+++ b/module/leccion2/momento2_3/index.html
@@ -7,8 +7,10 @@
       </h1>
       <img src="../../assets/img/avatars/avatar_femenina_brazos_en_cadera.webp" alt="avatar"
         class="sf-img-80 sf-img-sm-60 sf-img-md-40 sf-img-lg-30 mx-auto d-xl-none mb-2">
-      <p class="sf-text-white text-center">También existen otras herramientas para evaluar los riesgos, con estas las
-        famosas LISTAS DE CHEQUEO:</p>
+      <p class="sf-text-white text-center">El acoso laboral no siempre se presenta de la misma forma. Sus
+        manifestaciones dependen de la relación jerárquica entre
+        las personas involucradas. Para comprender mejor cómo se origina, te presentamos los tres tipos más frecuentes.
+      </p>
     </div>
   </div>
 
