--- a/module/leccion2/momento2_4/index.html
+++ b/module/leccion2/momento2_4/index.html
@@ -9,11 +9,8 @@
       <img src="../../assets/img/avatars/avatar_equipares4.webp" alt="avatar"
         class="sf-img-80 sf-img-sm-60 sf-img-md-40 sf-img-lg-30 mx-auto d-xl-none mb-2">
       <p class="sf-text-white text-justify">
-        En Chile, <strong>no todo desacuerdo laboral es acoso.</strong> La Ley Karin <strong>promueve ambientes seguros
-          y
-          respetuosos,</strong>
-        diferenciando el
-        conflicto, el acoso y la violencia en el trabajo.
+        Una vez revisadas las distintas formas en que puede manifestarse el acoso laboral, te invitamos a aplicar este
+        conocimiento. A continuación, relaciona cada situación con el tipo de acoso que representa.
       </p>
     </div>
   </div>
