--- a/module/leccion2/momento2_7/index.html
+++ b/module/leccion2/momento2_7/index.html
@@ -7,11 +7,9 @@
         <img src="../../assets/img/avatars/avatar_hombre_manos_abiertas.webp" alt="avatar"
             class="sf-img-80 sf-img-sm-60 sf-img-md-40 sf-img-lg-30 sf-img-xl-40 mx-auto">
         <p class="sf-text-white text-justify">
-            La Violencia en el Trabajo se refiere a las conductas que afectan a las trabajadoras y a los trabajadores,
-            con ocasión
-            de la prestación de servicios, por parte de terceros ajenos a la relación laboral, entendiéndose como tales,
-            clientes,
-            proveedores o usuarios, entre otros.
+            A continuación, revisaremos casos concretos de violencia laboral ejercida por terceros externos.
+            Estos ejemplos te ayudarán a identificar situaciones reales que pueden presentarse en diferentes
+            entornos de trabajo y cómo reconocer cuando se está ante un acto de violencia laboral.
         </p>
 
     </div>
