--- a/module/leccion2/momento2_8/index.html
+++ b/module/leccion2/momento2_8/index.html
@@ -25,7 +25,8 @@
         <div class="w-80 mx-auto">
             <div class="text-center mb-3">
                 <i class="hipt hipt-light">
-                    Arrastra a cada caja la opción correcta
+                    Clasifica cada situación: arrastra a 'SÍ' si es acoso laboral o a 'NO' si es una práctica laboral
+                    legítima.
                     <i class="fas fa-arrow-down"></i>
                 </i>
             </div>
