--- a/module/leccion2/momento2_9/index.html
+++ b/module/leccion2/momento2_9/index.html
@@ -8,13 +8,10 @@
         <img src="../../assets/img/avatars/avatar_hombre_señaladano_derecha_una_mano.webp" alt="avatar"
             class="sf-img-80 sf-img-sm-60 sf-img-md-40 sf-img-lg-30 sf-img-xl-40 mx-auto">
         <p class="sf-text-white text-justify">
-            El acoso laboral comprende conductas repetitivas que buscan humillar, aislar o perjudicar al trabajador,
-            afectando su
-            dignidad y entorno laboral. En cambio, las acciones que no constituyen acoso son aquellas propias de la
-            gestión o
-            autoridad del empleador, como supervisar, corregir o evaluar el desempeño, siempre que se realicen con
-            respeto y
-            justificación.
+            La Ley Karin identifica conductas específicas de acoso laboral organizadas en cuatro categorías principales.
+            Estas conductas van desde el aislamiento social hasta la manipulación de tareas, pasando por agresiones
+            verbales y ataques personales. Conocer estas categorías te ayudará a identificar y prevenir situaciones
+            de acoso en tu entorno laboral.
         </p>
 
     </div>
