--- a/module/leccion3/momento3_1/index.html
+++ b/module/leccion3/momento3_1/index.html
@@ -10,13 +10,22 @@
         <hr class="hr-50">
         <h1 class="sf-txt-md sf-txt-xl-lg sf-txt-300 sf-text-white">
           <span class="animate__animated animate__rotateInDownLeft animate__delay-0s"><i
-              class=" fa-regular fa-circle-check sf-text-purple"></i> Protocolo interno de denuncia y recepción de casos
+              class=" fa-regular fa-circle-check sf-text-purple"></i> Correcta activación del protocolo interno
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-1s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Investigación y evaluación de denuncias
+              class="fa-regular fa-circle-check sf-text-purple"></i> Conductas y entornos que favorecen el acoso y la violencia laboral
             <br></span>
           <span class="animate__animated animate__rotateInDownLeft animate__delay-2s"><i
-              class="fa-regular fa-circle-check sf-text-purple"></i> Medidas correctivas y de protección a las víctimas
+              class="fa-regular fa-circle-check sf-text-purple"></i> Principios de un tratamiento adecuado según la ley Karin
+            <br></span>
+          <span class="animate__animated animate__rotateInDownLeft animate__delay-3s"><i
+              class="fa-regular fa-circle-check sf-text-purple"></i> Cómo identificar y actuar ante situaciones de acoso o violencia
+            <br></span>
+          <span class="animate__animated animate__rotateInDownLeft animate__delay-4s"><i
+              class="fa-regular fa-circle-check sf-text-purple"></i> Casos prácticos de acoso laboral
+            <br></span>
+          <span class="animate__animated animate__rotateInDownLeft animate__delay-5s"><i
+              class="fa-regular fa-circle-check sf-text-purple"></i> Canales y procedimiento de denuncia
             <br></span>
         </h1>
       </div>
