--- a/module/leccion3/momento3_13/index.html
+++ b/module/leccion3/momento3_13/index.html
@@ -5,6 +5,9 @@
         </h1>
         <img src="../../assets/img/avatars/avatar_femenina_brazos_cruzados.webp" alt="avatar"
             class="sf-img-80 sf-img-sm-60 sf-img-md-50 sf-img-lg-80 sf-img-xl-50 mx-auto mb-2">
+        <p class="sf-text-white text-justify">
+            <span class="sf-txt-800"></span> Observa las consecuencias y medidas disciplinarias que se aplican cuando se confirma un caso de acoso laboral, y cómo se restablece un ambiente de trabajo digno y seguro.
+        </p>
     </div>
     <div class="animate__animated animate__fadeInRightBig  col-lg-5 col-md-12 sf-cr-row">
         <i class="hipt hipt-light my-2">
