--- a/module/leccion3/momento3_2/index.html
+++ b/module/leccion3/momento3_2/index.html
@@ -21,6 +21,12 @@
 
     <div class="animate__animated animate__fadeInLeftBig col-12">
         <!-- contenido -->
+        <div class="text-center mb-3 mt-4">
+            <i class="hipt hipt-light">
+                Explora todos los factores de riesgo navegando por las páginas. Usa los puntos para ver el contenido completo y conocer todas las medidas de prevención.
+                <i class="fas fa-arrow-down"></i>
+            </i>
+        </div>
         <div class="mom3_2-infografia-slider">
             <div class="mom3_2-slider-container">
                 <!-- Página 1: Filas 1-2 -->
@@ -46,7 +52,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/implementar_capacitacion_obligatoria.webp" alt="Capacitación"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Implementar capacitación obligatoria a jefaturas sobre
+                                <span class="mom3_2-prevention-text">Implementar capacitación obligatoria a jefaturas
+                                    sobre
                                     liderazgo positivo, manejo de conflictos, y perspectiva de género.</span>
                             </div>
                         </div>
@@ -99,7 +106,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/realizar_un_analisis_puesto_trabajo.webp" alt="Análisis"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Realizar un análisis de puestos de trabajo para asegurar
+                                <span class="mom3_2-prevention-text">Realizar un análisis de puestos de trabajo para
+                                    asegurar
                                     una distribución de tareas equitativa y realista.</span>
                             </div>
                         </div>
@@ -121,7 +129,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/definir_perfiles_cargo_responsabilidades.webp" alt="Perfiles"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Definir perfiles de cargo y responsabilidades de forma
+                                <span class="mom3_2-prevention-text">Definir perfiles de cargo y responsabilidades de
+                                    forma
                                     clara y escrita. Realizar evaluaciones objetivas.</span>
                             </div>
                         </div>
@@ -152,7 +161,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/implementar_seguridad_fisica.webp" alt="Seguridad"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Implementar medidas de seguridad física (barreras, botones
+                                <span class="mom3_2-prevention-text">Implementar medidas de seguridad física (barreras,
+                                    botones
                                     de pánico). Protocolos de manejo de público difícil.</span>
                             </div>
                         </div>
@@ -174,7 +184,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/fomentar_canales_comunicacion.webp" alt="Canales"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Fomentar canales de comunicación horizontal. Regular el
+                                <span class="mom3_2-prevention-text">Fomentar canales de comunicación horizontal.
+                                    Regular el
                                     uso de plataformas digitales para evitar el ciberacoso.</span>
                             </div>
                         </div>
@@ -227,7 +238,8 @@
                             <div class="mom3_2-prevention-capsule">
                                 <img src="./momento3_2/img/instaurar_procedimientos_medicacion.webp" alt="Mediación"
                                     class="mom3_2-prevention-icon">
-                                <span class="mom3_2-prevention-text">Instaurar un procedimiento de mediación o resolución de
+                                <span class="mom3_2-prevention-text">Instaurar un procedimiento de mediación o
+                                    resolución de
                                     conflictos temprana. Evitar el aislamiento de grupos.</span>
                             </div>
                         </div>
