--- a/module/leccion3/momento3_5/index.html
+++ b/module/leccion3/momento3_5/index.html
@@ -1,7 +1,7 @@
 <section class="row h-100">
     <!-- Columna izquierda -->
     <div class="animate__animated animate__fadeInLeftBig col-12 col-lg-6 sf-bg-dark sf-cl-row text-white">
-        <h1 class="sf-text-white text-center">principios de un tratamiento <br>
+        <h1 class="sf-text-white text-center">Principios de un tratamiento <br>
             <span class="sf-text-purple">adecuado según la ley Karin
             </span>
         </h1>
