--- a/module/leccion3/momento3_9/index.html
+++ b/module/leccion3/momento3_9/index.html
@@ -24,8 +24,7 @@
         <div class="my-4 my-lg-0 text-center">
             <div class="text-center mb-3">
                 <i class="hipt hipt-light">
-                    ​​La Ley Karin (Ley N° 21.643) establece que todo el proceso de denuncia, investigación y sanción
-                    debe regirse por:
+                    Haz clic en cada letra para descubrir los principios fundamentales que rigen la Ley Karin y aprender más sobre sus aplicaciones.
                     <i class="fas fa-arrow-down"></i>
                 </i>
             </div>
