--- a/module/leccion1/momento1_3/index.html
+++ b/module/leccion1/momento1_3/index.html
@@ -24,11 +24,16 @@
           <div class="card-info">
             <h3 class="sf-fm-4">Trabajadores y trabajadoras dependientes</h3>
             <hr>
-            <ul class="sf-fm-4 text-justify guion">
+            <p class="sf-fm-4 text-justify">
+              Todas las personas contratadas bajo vínculo laboral (con contrato de trabajo) en empresas
+              privadas, servicios públicos,
+              organizaciones sin fines de lucro, etc.
+            </p>
+            <!-- <ul class="sf-fm-4 text-justify guion">
               <li>Todas las personas contratadas bajo vínculo laboral (con contrato de trabajo) en empresas
                 privadas, servicios públicos,
                 organizaciones sin fines de lucro, etc.</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -39,11 +44,16 @@
           <div class="card-info">
             <h3 class="sf-fm-4">Empleadores y representantes de la empresa</h3>
             <hr>
-            <ul class="sf-fm-4 text-justify guion">
+            <p class="sf-fm-4 text-justify">
+              Toda persona natural o jurídica que emplee trabajadores está obligada a cumplir con la
+              ley. <br>
+              Incluye jefaturas, supervisores, directivos.
+            </p>
+            <!-- <ul class="sf-fm-4 text-justify guion">
               <li>Toda persona natural o jurídica que emplee trabajadores está obligada a cumplir con la
                 ley.</li>
               <li>Incluye jefaturas, supervisores, directivos</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -54,11 +64,16 @@
           <div class="card-info">
             <h3 class="sf-fm-4">Terceros ajenos a la empresa (nueva incorporación clave)</h3>
             <hr>
-            <ul class="sf-fm-4 text-justify guion">
-              <li>Se reconoce la violencia o acoso ejercido por terceros externos, Esta innovación obliga a
+            <p class="sf-fm-4 text-justify">
+              Se reconoce la violencia o acoso ejercido por terceros externos, esta innovación obliga a
+              los empleadores a proteger a
+              los trabajadores incluso ante agresiones externas durante la prestación de servicios.
+            </p>
+            <!-- <ul class="sf-fm-4 text-justify guion">
+              <li>Se reconoce la violencia o acoso ejercido por terceros externos, esta innovación obliga a
                 los empleadores a proteger a
                 los trabajadores incluso ante agresiones externas durante la prestación de servicios.</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
@@ -69,10 +84,14 @@
           <div class="card-info">
             <h3 class="sf-fm-4">Testigos y compañeros de trabajo</h3>
             <hr>
-            <ul class="sf-fm-4 text-justify guion">
+            <p class="sf-fm-4 text-justify">
+              La ley también establece deberes y derechos para testigos o compañeros que detecten
+              situaciones de acoso o violencia.
+            </p>
+            <!-- <ul class="sf-fm-4 text-justify guion">
               <li>La ley también establece deberes y derechos para testigos o compañeros que detecten
                 situaciones de acoso o violencia.</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
