--- a/module/leccion1/momento1_6/index.html
+++ b/module/leccion1/momento1_6/index.html
@@ -56,17 +56,127 @@
 
 <!-- Modal -->
 <div class="modal fade" id="modalQuiz" tabindex="-1" aria-labelledby="modalEvaluacionLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered sf-modal-xl">
+  <div class="modal-dialog modal-dialog-centered sf-modal-xxl">
     <div class="modal-content">
       <div class="modal-header sf-bg-purple">
         <h5 class="modal-title text-white" id="modalEvaluacionLabel">
-          <i class="fas fa-tasks me-2"></i>Quiz: Implicancias claves para la empresa y trabajadores
+          <i class="fas fa-tasks me-2"></i>Quiz: Selecciona la respuesta correcta para cada factor
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i
             class="fa fa-times"></i></button>
       </div>
       <div class="modal-body">
-        <div id="lumi-activity-quiz"></div>
+        <div class="row animate__animated animate__backInUp">
+          <!-- aqui va la actividad -->
+          <div class="quiz-container-acc-traf">
+            <div class="cards-container-acc-traf">
+              <div class="card-container-acc-traf" id="card-conductor">
+                <h2 class="card-title-acc-traf">Acoso Laboral</h2>
+
+                <div class="image-container-acc-traf">
+                  <img src="./momento1_6/img/acoso_laboral.webp" alt="CONDUCTOR" class="card-image-acc-traf">
+                  <div class="validation-icon-container-acc-traf" style="display: none;">
+                    <img src="assets/img/botones/checkAct.png" alt="Validation Icon" class="validation-icon-acc-traf">
+                  </div>
+                </div>
+
+                <div class="info-texts-container-acc-traf">
+                  <div class="info-text-acc-traf">Bromas constantes hacia una persona por su género o apariencia física.
+                  </div>
+                </div>
+
+                <div class="select-container-acc-traf">
+                  <select id="select-conductor">
+                    <option value="">Seleccione una opción</option>
+                    <option value="Un usuario que agrede verbalmente al personal de atención.">Un usuario que agrede
+                      verbalmente al personal de atención.</option>
+                    <option value="Un compañero que envía mensajes con insinuaciones sexuales por chat.">Un compañero
+                      que envía mensajes con insinuaciones sexuales por chat.</option>
+                    <option value="Un jefe que humilla públicamente a un trabajador por su desempeño.">Un jefe que
+                      humilla públicamente a un trabajador por su desempeño.</option>
+                  </select>
+                </div>
+
+                <div class="feedback-text-acc-traf" style="display: none;"></div>
+              </div>
+
+              <div class="card-container-acc-traf" id="card-vehiculo">
+                <h2 class="card-title-acc-traf">Acoso Sexual</h2>
+
+                <div class="image-container-acc-traf">
+                  <img src="./momento1_6/img/acoso_sexual.webp" alt="VEHÍCULO" class="card-image-acc-traf">
+                  <div class="validation-icon-container-acc-traf" style="display: none;">
+                    <img src="assets/img/botones/checkAct.png" alt="Validation Icon" class="validation-icon-acc-traf">
+                  </div>
+                </div>
+
+                <div class="info-texts-container-acc-traf">
+                  <div class="info-text-acc-traf">Comentarios reiterados sobre el cuerpo o vestimenta de una persona en
+                    la oficina.</div>
+                </div>
+
+                <div class="select-container-acc-traf">
+                  <select id="select-vehiculo">
+                    <option value="">Seleccione una opción</option>
+                    <option value="Un usuario que agrede verbalmente al personal de atención.">Un usuario que agrede
+                      verbalmente al personal de atención.</option>
+                    <option value="Un compañero que envía mensajes con insinuaciones sexuales por chat.">Un compañero
+                      que envía mensajes con insinuaciones sexuales por chat.</option>
+                    <option value="Un jefe que humilla públicamente a un trabajador por su desempeño.">Un jefe que
+                      humilla públicamente a un trabajador por su desempeño.</option>
+                  </select>
+                </div>
+
+                <div class="feedback-text-acc-traf" style="display: none;"></div>
+              </div>
+
+              <div class="card-container-acc-traf" id="card-medio">
+                <h2 class="card-title-acc-traf">Violencia Externa</h2>
+
+                <div class="image-container-acc-traf">
+                  <img src="./momento1_6/img/violencia externa.webp" alt="EL MEDIO" class="card-image-acc-traf">
+                  <div class="validation-icon-container-acc-traf" style="display: none;">
+                    <img src="../../assets/img/botones/checkAct.png" alt="Validation Icon"
+                      class="validation-icon-acc-traf">
+                  </div>
+                </div>
+
+                <div class="info-texts-container-acc-traf">
+                  <div class="info-text-acc-traf">Un proveedor que grita y golpea el escritorio mientras discute con un
+                    trabajador.</div>
+                </div>
+
+                <div class="select-container-acc-traf">
+                  <select id="select-medio">
+                    <option value="">Seleccione una opción</option>
+                    <option value="Un usuario que agrede verbalmente al personal de atención.">Un usuario que agrede
+                      verbalmente al personal de atención.</option>
+                    <option value="Un compañero que envía mensajes con insinuaciones sexuales por chat.">Un compañero
+                      que envía mensajes con insinuaciones sexuales por chat.</option>
+                    <option value="Un jefe que humilla públicamente a un trabajador por su desempeño.">Un jefe que
+                      humilla públicamente a un trabajador por su desempeño.</option>
+                  </select>
+                </div>
+
+                <div class="feedback-text-acc-traf" style="display: none;"></div>
+              </div>
+            </div>
+
+            <div class="results-container-acc-traf" style="display: none;">
+              <h3 class="results-text-acc-traf"></h3>
+            </div>
+
+            <div class="buttons-container-acc-traf">
+              <button class="sf-btn sf-btn-purple validate-btn" disabled>
+                <i class="fa fa-check"></i> Validar
+              </button>
+
+              <button class="sf-btn sf-btn-purple reset-btn" disabled>
+                <i class="fa fa-repeat"></i> Reiniciar
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
