--- a/module/leccion2/evaluacion_leccion.html
+++ b/module/leccion2/evaluacion_leccion.html
@@ -52,12 +52,12 @@
                             <br><br>
                         </p>
 
-                        <button class="sf-btn sf-btn-purple" id="btnEvaluacion">
+                        <!-- <button class="sf-btn sf-btn-purple" id="btnEvaluacion">
+                            <i class="fas fa-clipboard"></i> Presentar Evaluación
+                        </button> -->
+                        <button class="sf-btn sf-btn-purple" onclick="presentarEvaluacion()">
                             <i class="fas fa-clipboard"></i> Presentar Evaluación
                         </button>
-                        <!-- <button class="sf-btn sf-btn-purple" onclick="presentarEvaluacion()">
-                                                    <i class="fas fa-clipboard"></i> Presentar Evaluación
-                                                </button> -->
 
                     </div>
                 </div>
@@ -98,9 +98,9 @@
             // window.location.href = path.replace("evaluacion", "compromiso") + "/compromiso.html";
         };
 
-        document.getElementById('btnEvaluacion').addEventListener('click', function () {
-            window.location.href = '../leccion3/index.html';
-        });
+        // document.getElementById('btnEvaluacion').addEventListener('click', function () {
+        //     window.location.href = '../leccion3/index.html';
+        // });
 
         function isSCORMEnvironment() {
             return (typeof window.parent.API !== 'undefined') ||
@@ -172,9 +172,8 @@
                             margin-bottom: 0;
                         ">Es momento de realizar la <strong>Evaluación Formativa</strong> y demostrar todo tu progreso.
                         <br><br>
-                        👉 Cierra esta ventana y continúa con el siguiente paso</p>
+                        <strong style="background-color: #6e3cd2; padding: 20px; border-radius: 10px; color: white;"> 👉 Cierra esta ventana y continúa con el siguiente paso</strong></p>
                         <br>
-                        <img src="../leccion2/img/leccion2.webp" class="mx-auto" alt="Guía">
                     </div>
                 </div>
             `;
