--- a/module/leccion3/momento3_10/index.html
+++ b/module/leccion3/momento3_10/index.html
@@ -5,6 +5,9 @@
         </h1>
         <img src="../../assets/img/avatars/avatar_hombre_explicando.webp" alt="avatar"
             class="sf-img-80 sf-img-sm-60 sf-img-md-50 sf-img-lg-80 sf-img-xl-50 mx-auto mb-2">
+        <p class="sf-text-white text-justify">
+            <span class="sf-txt-800"></span> Conoce cómo funciona el protocolo interno de la empresa, las medidas de resguardo que se implementan y el proceso de investigación imparcial que determina la veracidad de la denuncia.
+        </p>
     </div>
     <div class="animate__animated animate__fadeInRightBig  col-lg-5 col-md-12 sf-cr-row">
         <i class="hipt hipt-light my-2">
