--- a/module/leccion3/momento3_4/index.html
+++ b/module/leccion3/momento3_4/index.html
@@ -1,6 +1,6 @@
 <section class="row h-100">
     <div class="animate__animated animate__fadeInLeftBig  col-lg-6 sf-bg-dark sf-cl-row">
-        <h1 class="sf-text-white text-center">principios de un tratamiento<br>
+        <h1 class="sf-text-white text-center">Principios de un tratamiento<br>
             <span class="sf-text-purple">adecuado segun la ley Karin</span>
         </h1>
         <img src="../../assets/img/avatars/avatar_femenina_gesto_no_sabe.webp" alt="avatar"
