--- a/module/leccion3/momento3_8/index.html
+++ b/module/leccion3/momento3_8/index.html
@@ -5,6 +5,9 @@
         </h1>
         <img src="../../assets/img/avatars/avatar_hombre_dislike.webp" alt="avatar"
             class="sf-img-80 sf-img-sm-60 sf-img-md-50 sf-img-lg-80 sf-img-xl-50 mx-auto mb-2">
+        <p class="sf-text-white text-justify">
+            <span class="sf-txt-800"></span> Descubre cómo recopilar evidencias y presentar una denuncia formal ante situaciones de acoso laboral, siguiendo los procedimientos establecidos por la ley.
+        </p>
 
     </div>
     <div class="animate__animated animate__fadeInRightBig  col-lg-6 col-md-12 sf-cr-row">
